# tennis-analysis

./: .gitignore  README.md  main.py  pyproject.toml  yolo_inference.py
court_line_detector/: court_line_detector.py
tracker_stubs/: ball_detection.pkl  player_detection.pkl
trackers/: ball_tracker.py  player_tracker.py
training/: tennis_ball_detector_training.ipynb  tennis_court_keypoint_training.ipynb
training/dataset/: README.roboflow.txt
training/dataset/test/: _annotations.coco.json
training/dataset/train/: _annotations.coco.json
training/dataset/valid/: _annotations.coco.json
training/runs/detect/train/: args.yaml
training/runs/detect/train2/: args.yaml  results.csv
training/tennis_yolo/: data.yaml
training/tennis_yolo_final/: data.yaml
training/tennis_yolo_final/labels/: train.cache  val.cache
training/tennis_yolo_final/labels/test/: synframe101_jpg.rf.1f308718bf44dcb6dd10e32ce9fc6cd5.txt  synframe119_jpg.rf.86ddef4b7c7c996344879b9f79c46ddf.txt  synframe122_jpg.rf.9f84517312ec31ca29cfd1b828dfe647.txt  synframe1247_jpg.rf.f1141dda575c60eeb4b7a29a583c1afa.txt  synframe136_jpg.rf.750bbb8f3e5d2922a3b9c2758a1b4ac2.txt  synframe151_jpg.rf.73b75aa9ccab962d663e0b3d17cb0bbf.txt  synframe153_jpg.rf.0e01c7cc802cff779c427c327bdd5419.txt  synframe348_jpg.rf.e9e3f0e971cd595dc78dec19b574d53c.txt  synframe353_jpg.rf.926c3fa40f1e7b4fd5682849aa9cebb3.txt  synframe381_jpg.rf.8a20d00c58388526130dc61757296537.txt  synframe384_jpg.rf.7c627687a800348211711b0338d6b4dd.txt  (+39 more)
utils/: bbox_utils.py  video_utils.py
(+526 files in other folders)
