[project]
name = "tennis_analysis"
version = "0.1.0"
description = "Tennis analysis using YOLO and Keypoint Detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pycocotools>=2.0.0",
    "gdown>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
